# prometheus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hashlibrary.schema.json  prometheus.sln  setup.bat
.github/workflows/: msbuild.yml
CMake/: Configure.cmake  Version.cmake
CMake/Platform/: MSVC.cmake
Prometheus-Core/: CMakeLists.txt  ImguiRenderer.cpp  STU.cpp  STU.h  dllmain.cpp  entity_admin.h  globals.cpp  manager_4_secrets.cpp  renderer.cpp  renderer.h  statescript_logger.h
Prometheus-Core/Logs/: Logs.h
Prometheus-Core/window_manager/: window_manager.cpp  window_manager.h
Prometheus-Core/windows/: player_spawner_deluxe.h  statescript_registry.h  viewmodel_write_blocker.h
patcher/: Program.cs  patcher.c
prometheus/: CMakeLists.txt  ExceptionFormatter.cpp  ExceptionFormatter.h  ImguiRenderer.h  MovementState.h  STU.cpp  STU.h  STUConfigVarDynamic_Custom.cpp  STUConfigVarDynamic_Custom.h  STUConfigVar_Custom.cpp  STUConfigVar_Custom.h  STU_Editable.cpp  STU_Editable.h  Statescript.cpp  Statescript.h  StatescriptExpressionParser.h  StatescriptVar.h  bsDatStore.h  build.sh  dllmain.cpp  entity_admin.cpp  entity_admin.h  game.h  globals.cpp  globals.h  hash_exporter.h  pe.h  prometheus.vcxproj  prometheus.vcxproj.filters  search_helper.h  statescript_logger.h  stringhash_library.cpp  stringhash_library.h  stu_resources.h  vcpkg.json
prometheus/mingw_compat/: ow_excpt.h  ow_return_address.cpp
prometheus/window_manager/: management_window.cpp  window_manager.cpp  window_manager.h  window_regs.cpp
prometheus/windows/: bitconverter_calls.h  comments_window.h  component_notes.h  entadmin_compodependencies.h  entity_bounds_renderer.h  entity_window.cpp  entitydef_list.h  freecam_movement_recorder.h  game_data_window.h  hash_display_window.h  herolineup_creator.h  ini_settings_window.h  jam_messagedetail_window.h  jamprotocol_window.h  loadlist_visualizer.h  message_window.h  movementsys_editor.h  name_value_struct.h  player_spawner_deluxe.h  statescript_list.cpp  statescript_registry.h  statescript_window.cpp  stu_explorer.cpp  stu_object_edit.h  stu_primitive_edit.h  type_7b_strings.h  viewmodel_write_blocker.h
